--- a/P004314.opf/meta.yml
+++ b/P004314.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P004314
+id: P004314
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG24735
   title: ཞིང་པའི་ཡིག་སྐུར་ངོ་གཏུག་སྐོར་གྱི་བཅའ་ཁྲིམས་མཛུབ་སྟོན།
-  volume: ''
   author: ''
+  volumes: {}
