--- a/P004314.opf/meta.yml
+++ b/P004314.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W1KG24735
   title: ཞིང་པའི་ཡིག་སྐུར་ངོ་གཏུག་སྐོར་གྱི་བཅའ་ཁྲིམས་མཛུབ་སྟོན།
   author: ''
-  volumes: {}
+  volumes:
+    f189f9ff35bc4ad5a0abbdb03a0ae56b:
+      image_group_id: I1KG24737
+      title: ''
+      volume_number: 1
+      total_pages: 287
