--- a/P004314.opf/layers/v001/Pagination.yml
+++ b/P004314.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 238555d30bce4fa38c893e61c1fa20c2
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   d9d986251a964d61aa337bee47d6d84d:
