--- a/P004314.opf/meta.yml
+++ b/P004314.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P004314
 initial_creation_type: ocr
+created_at: 26/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W1KG24735
   title: ཞིང་པའི་ཡིག་སྐུར་ངོ་གཏུག་སྐོར་གྱི་བཅའ་ཁྲིམས་མཛུབ་སྟོན།
